# FastAPIStudy

./: README.md  database.py  pyproject.toml  server.py  sqlite.db
product/: main.py  models.py  repository.py  schemas.py
