[tool.poetry]
name = "fastapistudy"
version = "0.1.0"
description = ""
authors = ["João Pedro Limão <jplimao12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
mypy = "^0.910"
SQLAlchemy = "^1.4.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
